# Another_DnD_simulator

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Changelog.txt  Classes.cpp  Classes.h  GameOfImagination.cpp  GameOfImagination.h  Interface_races_classes_background.h  Inventory.cpp  Item.cpp  Item.h  Item_usage.cpp  Items_Factory.h  LICENSE  Notepa.txt  README.md  Race_Class_Background.cpp  Race_Class_Background.h  Skills_and_Spells.cpp  Skills_and_Spells.h  UsefulFunctions.cpp  UsefulFunctions.h  WorkWithJson.cpp  WorkWithJson.h  character.cpp  character.h  game_of_imagination.cpp  game_of_imagination.h  main.cpp
.github/ISSUE_TEMPLATE/: bad-code--serious-mistakes-.md  bad-code--solid-mistakes-.md
AditionalTools/: Allowance.cpp  Allowance.h
AditionalTools/5etools json/backgrounds/: backgrounds.json
AditionalTools/5etools json/items/: items.json
AditionalTools/5etools json/monsters/: bestiary-all.json  bestiary-wdh.json
AditionalTools/5etools json/names/: names.json
AditionalTools/5etools json/races/: races.json
AditionalTools/5etools json/rewards/: rewards.json
AditionalTools/5etools json/spells/: spells-phb.json  spells-scag.json  spells-stream.json  spells-ua-mm.json  spells-ua-ss.json  spells-ua-tobm.json  spells-xge.json
Character/: Character_Creation.cpp  Character_Creation.h  Classes.cpp  Classes.h  Race.cpp  Race.h  Skills_and_Spells.cpp  Skills_and_Spells.h  UsefulFunctions.cpp  UsefulFunctions.h  character.cpp  character.h
FieldOfHonor/: Battleground.cpp  Battleground.h  Effect.cpp  Effect.h  FieldStuff.cpp  FieldStuff.h  MazeGenerator.cpp  MazeGenerator.h  Unicode_Console_Output.cpp
Inventory(Item)/: Item.cpp  Item.h  Item_usage.cpp  Items_Factory.h
Monsters/: Creature.cpp  Creature.h  Monster.cpp  Monster.h
Notes/: MazeGenerator
Skills_Spells_and_Feats_/: Skills_and_Spells.cpp  Skills_and_Spells.h
Tests/: Allowance_TEST.cpp  Allowance_TEST.h  Battleground_TEST.cpp  Battleground_TEST.h  Character_Test.cpp  Character_Test.h  Classes_TEST.cpp  Classes_TEST.h  Item_TEST.cpp  Item_TEST.h  Race_TEST.cpp  Race_TEST.h  TEST.h
aditional_tools/: allowance.cpp  allowance.h
aditional_tools/5etools json/feats/: feats.json
character/: character.cpp  character.h  class.cpp  class.h  common_functions.cpp  common_functions.h  race.cpp  race.h
items/: item.cpp  item.h  items_factory.h
local_map/: battleground.cpp  battleground.h  effect.cpp  effect.h  field_stuff.cpp  field_stuff.h  local_map_user_usage.cpp  local_map_user_usage.h  maze_generator.cpp  maze_generator.h  unicode_console_output.cpp  unicode_console_output.h
monsters/: creature.cpp  creature.h  monster.cpp  monster.h
notes/: maze_generator  steps_of_development  whole_thing
skills_spells_and_feats_/: skills_and_spells.cpp  skills_and_spells.h
tests/: alowance_test.cpp  alowance_test.h  battleground_test.cpp  battleground_test.h  character_test.cpp  character_test.h  classes_test.cpp  classes_test.h  item_test.cpp  item_test.h  race_test.cpp  race_test.h  test.h
(+36 files in other folders)
